[gd_scene load_steps=6 format=3 uid="uid://dfb3edd4wnnag"]

[ext_resource type="Script" uid="uid://pmnccyfhs5pm" path="res://actors/sprites/character_sprite.gd" id="1_702fr"]
[ext_resource type="Texture2D" uid="uid://wcmxajlvsg1i" path="res://actors/sprites/leg/legs_black_1.png" id="1_g2x4w"]
[ext_resource type="Texture2D" uid="uid://oyto6h4h2ewn" path="res://actors/sprites/torso/torso_blue_jacket.png" id="2_702fr"]
[ext_resource type="Texture2D" uid="uid://csxjjom3dyxfa" path="res://actors/sprites/head/white_head_1.png" id="3_o7wq7"]
[ext_resource type="Texture2D" uid="uid://ddl3g6wo4371s" path="res://actors/sprites/hand/hands_white_1.png" id="4_kfdqb"]

[node name="CharacterSprite" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_702fr")

[node name="LeftLeg" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, 9.333334)
texture = ExtResource("1_g2x4w")

[node name="RightLeg" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3, 9.333334)
texture = ExtResource("1_g2x4w")

[node name="Torso" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 1.333333)
texture = ExtResource("2_702fr")

[node name="Head" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8.666667)
texture = ExtResource("3_o7wq7")

[node name="LeftArm" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-6, 2.333333)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_kfdqb")

[node name="RightArm" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(6, 2.333333)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_kfdqb")
